--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.13.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/netinfo": "^6.0.0",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "expo": "~41.0.1",
-    "expo-status-bar": "~1.0.4",
+    "expo-image-picker": "~9.2.0",
+    "expo-location": "~12.0.4",
+    "expo-permissions": "~10.0.0",
+    "expo-status-bar": "~1.0.3",
     "firebase": "^7.9.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -21,13 +25,12 @@
     "react-native-gesture-handler": "~1.10.2",
     "react-native-gifted-chat": "^0.16.3",
     "react-native-input-scroll-view": "^1.11.0",
+    "react-native-maps": "0.27.1",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.0.0",
-    "link": "0.1.2",
     "react-native-web": "~0.13.12",
-    "react-navigation": "^4.4.4",
-    "@react-native-async-storage/async-storage": "^1.13.0"
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
